--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,22 +1,23 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Users</h1>
+<h3>Users</h3>
 
-<table>
+<table class="table table-striped table-bordered table-list">
   <thead>
     <tr>
-      <th>Firstname</th>
-      <th>Lastname</th>
-      <th>Country</th>
-      <th>City</th>
-      <th>Number hous</th>
-      <th>Email</th>
-      <th>Password</th>
-      <th colspan="3"></th>
+      <td>Firstname</td>
+      <td>Lastname</td>
+      <td>Country</td>
+      <td>City</td>
+      <td>Number hous</td>
+      <td>Email</td>
+      <td>Password</td>
+      <td><em class="glyphicon glyphicon-user"></em></td>
+      <td><em class="glyphicon glyphicon-pencil"></em></td>
+      <td><em class="glyphicon glyphicon-trash"></em></td>
     </tr>
   </thead>
-
-  <tbody>
+    <tbody>
     <% @users.each do |user| %>
       <tr>
         <td><%= user.Firstname %></td>
@@ -31,7 +32,7 @@
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
-  </tbody>
+    </tbody>
 </table>
 
 <br>
