--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,9 +41,9 @@
     <div class="navbar-header">
         <%= link_to "Home", root_path , class: "navbar-brand" %>
     </div>
-    <ul class="nav navbar-nav">
-        <li><%= link_to "Create", new_user_path  %></li>
-        <li><%= link_to "Users", users_path  %></li>
+  <!--  <ul class="nav navbar-nav">
+        <li>< %= link_to "Create", new_user_path  %></li>
+        <li>< %= link_to "Users", users_path  %></li> -->
     </ul>
   </div>
 </div>
