--- a/app/views/users/welcome.html.erb
+++ b/app/views/users/welcome.html.erb
@@ -1,3 +1,16 @@
-<h3> Welcome to my site =)</h3>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>My homepage</title>
+  <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+</head>
+<body>
+<h1>Welcome to my site</h1>
 
-<h1></h1>
+<p>There are nothing now, but by the way you can registr and have account on my site</p>
+
+<%= link_to "Registration",   new_user_path, :class =>"btn btn-info"  %> or
+<%= link_to "Login", login_path, :class =>"btn btn-info" %>
+
+</body>
+</html>
